# amaze

./: .gitignore  Cargo.toml  README.md  dump
src/: gen_maze.rs  lib.rs  main.rs  util.rs  window.rs
src/path_finders/: a_star.rs  bfs.rs  dfs.rs  dijkstra.rs  mod.rs  path_finder.rs
www/: index.html  index.js
