[package]
name = "amazes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "main"
path = "src/main.rs"

[dependencies]
druid = "0.7.0"
rand = "0.8.4"
priority-queue = "1.2.1"
wasm-bindgen = "0.2.78"
getrandom = { version = "0.2", features = ["js"] }
console_error_panic_hook = "0.1.6"